Removed dependency on scalaz and scalaz-stream